--- a/index.html
+++ b/index.html
@@ -41,12 +41,8 @@
       <div class="weather-container" id="weather-container">
         <div class="weather">
           <div class="weather-info">
-            <!-- icons -->
-            <div class="weather-des-img-div" id="#weather-des-img-div">
-              <img id="weather-desc-img" src="" alt="weather-desc" />
-            </div>
             <div class="weather-desc" id="weather-desc">
-              <!-- city name,temperature,weather main -->
+              <!-- city name,temperature,weather main,icons -->
             </div>
           </div>
         </div>
